camel3-cdi/istio07-camel-cdi-rabbitmq/istio07-01-cdi-consumer.yaml
apiVersion: v1
kind: Service
metadata:
  name: consumer-service
  labels:
    app: consumer-service 
spec:
  ports:
  - name: http
    port: 9090
    targetPort: 9090
  - name: prometheus
    port: 9999
    targetPort: 9999
  - name: jmx
    port: 16000
    targetPort: 16000
  selector:
    app: consumer

---

apiVersion: apps/v1
kind: Deployment
metadata:  
  name: consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer
      version: v1
  template:
    metadata:
      labels:
        app: consumer
        version: v1
    spec:
      containers:
      - image: emmerson/cdi-rabbit-consumer:1.0.4
        imagePullPolicy: IfNotPresent
        name: consumer
        ports:
        - containerPort: 9090
        - containerPort: 9999
        - containerPort: 16000
