camel3-cdi/istio07-camel-cdi-rabbitmq/istio07-01-cdi-producer.yaml
apiVersion: v1
kind: Service
metadata:
  name: producer-service
  labels:
    app: producer-service
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: prometheus
    port: 8888
    targetPort: 8888
  - name: jmx
    port: 16000
    targetPort: 16000
  selector:
    app: producer

---

apiVersion: apps/v1
kind: Deployment
metadata:  
  name: producer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: producer
      version: v1
  template:
    metadata:
      labels:
        app: producer
        version: v1
    spec:
      containers:
      - image: emmerson/cdi-rabbit-producer:1.0.5
        imagePullPolicy: IfNotPresent
        name: producer
        ports:
        - containerPort: 8080
        - containerPort: 8888
        - containerPort: 16000
