camel3-cdi/istio07-camel-cdi-rabbitmq/istio07-01-mock-upstream.yaml
apiVersion: v1
kind: Service
metadata:
  name: upstream
  labels:
    app: upstream
spec:
  ports:
  - name: http
    port: 10003
    targetPort: 10003
  selector:
    app: upstream

---

apiVersion: apps/v1
kind: Deployment
metadata:  
  name: upstream
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upstream
      version: v1
  template:
    metadata:
      labels:
        app: upstream
        version: v1
    spec:
      containers:
      - image: emmerson/upstream:mock
        imagePullPolicy: IfNotPresent
        name: upstream
        ports:
        - containerPort: 10003
