camel3-cdi/istio07-camel-cdi-rabbitmq/istio07-01-rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq 
spec:
  ports:
  - name: management
    port: 15672
    targetPort: 15672
  - name: interface
    port: 5672
    targetPort: 5672
  selector:
    app: rabbitmq

---

apiVersion: apps/v1
kind: Deployment
metadata:  
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
      version: v1
  template:
    metadata:
      labels:
        app: rabbitmq
        version: v1
    spec:
      containers:
      - image: rabbitmq:3-management
        imagePullPolicy: IfNotPresent
        name: rabbitmq
        ports:
        - containerPort: 5672
        - containerPort: 15672
