camel3-cdi/istio07-camel-cdi-rabbitmq/istio07-02-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: poc07-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http1emm
      protocol: HTTP
    hosts:
    - "poc07.istio.com"
